--- a/.github/workflows/Linux_build.yml
+++ b/.github/workflows/Linux_build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Convert Markdown to HTML
-        uses: natescherer/markdown-to-html-with-github-style-action
+        uses: natescherer/markdown-to-html-with-github-style-action@v1.1.0
         with:
           path: README.md,CREDITS.md
           outputpath: out
