--- a/.github/workflows/Linux_build.yml
+++ b/.github/workflows/Linux_build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   Job:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Convert Markdown to HTML
         uses: natescherer/markdown-to-html-with-github-style-action@v1.1.0
